--- a/wp-content/themes/flatsome-child/assets/css/thanh-toan.css
+++ b/wp-content/themes/flatsome-child/assets/css/thanh-toan.css
@@ -816,13 +816,55 @@ th {
     width: 100%;
     min-height: 45px;
     font-size: 17px;
-    background: #a44f30;
+    background: #75c02a;
 }
 #btn-confirm-address {
     min-height: 45px;
     margin-top: 15px;
     border-radius: 4px;
     padding: 0 35px;   
+}
+#open-billing-popup {
+    width: 100%;
+    min-height: 45px;
+    font-size: 17px;
+    background:#75c02a;
+    position: relative;
+    overflow: hidden;
+    border-radius: 6px;
+}
+
+#open-billing-popup::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    border-radius: inherit;
+
+    background: linear-gradient(
+        90deg,
+        rgba(255,255,255,0) 0%,
+        rgba(255,255,255,0.8) 50%,
+        rgba(255,255,255,0) 100%
+    );
+
+    transform: translateX(-100%);
+    animation: shineMove 2s linear infinite;
+}
+
+@keyframes shineMove {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(100%);
+    }
+}
+
+#open-billing-popup:hover {
+    background-color: #008000;
 }
 @media (max-width: 768px) {
     .checkout-container {
@@ -1004,3 +1046,4 @@ th {
         gap: 0;
     }
 }
+
